# libtarantoolbox

./: CMakeLists.txt  README.md  tarantoolbox.c  tarantoolbox.h  tarantoolbox_call.c  tarantoolbox_delete.c  tarantoolbox_field.c  tarantoolbox_insert.c  tarantoolbox_message.c  tarantoolbox_private.h  tarantoolbox_select.c  tarantoolbox_tuple.c  tarantoolbox_tuples.c  tarantoolbox_update.c  tarantoolbox_util.c  test.c
SPECS/: libtarantoolbox.spec
